Yaml templates sharing container image (#3268)
* [WIP] Yaml templates sharing container image

* Fix checking incompatible template logic